--- a/client/my-sites/plugins/plugins-browser-item/style.scss
+++ b/client/my-sites/plugins/plugins-browser-item/style.scss
@@ -10,7 +10,7 @@
 	cursor: pointer;
 	display: block;
 	float: left;
-	margin: 20px 0 0 0;
+	margin: 16px 0 0 0;
 	position: relative;
 	overflow: hidden;
 
@@ -67,10 +67,20 @@
 		}
 
 		@include break-medium {
+			// select first row for a 2 column grid
+			&:first-of-type,
+			&:nth-of-type(2) {
+				margin-top: 24px;
+			}
 			width: calc(50% - 10px); // 2 column grid with 20px gutter
 		}
 
 		@include break-wide {
+			&:first-of-type,
+			&:nth-of-type(2),
+			&:nth-of-type(3) {
+				margin-top: 24px;
+			}
 			width: calc(33% - 10px); // 3 column grid with 20px gutter
 		}
 	}
