Round 2 of adding inset box-shadow to reader images

--- a/client/blocks/reader-featured-image/style.scss
+++ b/client/blocks/reader-featured-image/style.scss
@@ -10,7 +10,6 @@
 	img {
 		/* stylelint-disable-next-line scales/radii */
 		border-radius: 6px;
-		height: 300px;
-		max-width: unset;
+		object-fit: cover;
 	}
 }
