--- a/client/blocks/reader-full-post/_content.scss
+++ b/client/blocks/reader-full-post/_content.scss
@@ -58,6 +58,30 @@
 
 .is-reader-page .reader-full-post__story-content {
 	padding-top: 0 !important;
+
+	.wp-block-gallery .wp-block-image {
+		position: relative;
+		&::after {
+			content: "";
+			position: absolute;
+			pointer-events: none;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+			border-radius: 6px;
+		}
+
+		figcaption {
+			border-bottom-left-radius: 6px;
+			border-bottom-right-radius: 6px;
+		}
+		img {
+			border-radius: 6px;
+			display: inherit;
+		}
+	}
 }
 
 .reader-full-post .embed-youtube,
