--- a/client/blocks/reader-related-card/style.scss
+++ b/client/blocks/reader-related-card/style.scss
@@ -117,6 +117,10 @@
 			box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
 			border-radius: 6px;
 		}
+
+		img {
+			height: 300px;
+		}
 	}
 
 	.reader-related-card__meta > a {
