--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -881,7 +881,7 @@
 		}
 		.reader-post-card__featured-images-item:last-child {
 			.reader-featured-image,
-			.reader-featured-image::after
+			.reader-featured-image::after,
 			img {
 				border-bottom-right-radius: 6px;
 				border-top-right-radius: 6px;
