--- a/client/components/post-excerpt/style.scss
+++ b/client/components/post-excerpt/style.scss
@@ -5,10 +5,10 @@
 	display: -webkit-box;
 	-webkit-box-orient: vertical;
 	overflow: hidden;
-	-webkit-line-clamp: 3;
+	-webkit-line-clamp: 2;
 	font-size: $font-body;
 	line-height: 1.618;
-	max-height: 24px * 3;
+	max-height: 45px;
 
 	@include breakpoint-deprecated( "<480px" ) {
 		font-size: $font-body;
