Fix up author card styles for recommended posts

--- a/client/blocks/reader-author-link/style.scss
+++ b/client/blocks/reader-author-link/style.scss
@@ -1,10 +1,6 @@
-.reader-author-link {
-	color: var(--color-primary);
-}
-
 .reader-author-link:hover,
 .reader-author-link:active {
-	color: var(--color-accent);
+	color: var(--color-text-subtle);
 }
 
 .reader-author-link:focus {
