Experiment one: remove secondary layout height and re-add original max-height

--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -170,6 +170,7 @@
 // The actual list of sites
 .site-selector__sites {
 	flex: 1;
+	max-height: calc(100% - 93px);
 	overflow-y: auto;
 	background: var(--color-surface);
 
