Experiment three: make height auto on mobile

--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -213,6 +213,7 @@ body.is-focus-sites {
 		@include breakpoint-deprecated( "<660px" ) {
 			-webkit-overflow-scrolling: touch;
 			transform: translateX(-100%);
+			height: auto;
 		}
 	}
 
