Make the upsells work

--- a/client/components/marketing-survey/cancel-purchase-form/style.scss
+++ b/client/components/marketing-survey/cancel-purchase-form/style.scss
@@ -32,6 +32,7 @@
 	margin: 0 auto 3rem;
 }
 
+.cancel-purchase-form__upsell,
 .cancel-purchase-form__feedback-questions {
 	max-width: 540px;
 	margin: 0 auto;
