--- a/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
@@ -9,6 +9,21 @@
 	}
 
 	.step-container {
+		width: 100%;
+		height: 100%;
+
+		@include break-small {
+			height: auto;
+		}
+
+		@include onboarding-break-mobile-landscape {
+			padding: 25px 0 0;
+		}
+
+		@media screen and ( max-height: 720px ) {
+			padding: 30px 0 0;
+		}
+
 		.step-container__header {
 			margin-bottom: 20px;
 
@@ -16,9 +31,25 @@
 				margin-bottom: 32px;
 			}
 
-			// very narrow wide screens (mobile land scape)
-			@media screen and ( max-height: 512px ) {
-				margin: 0;
+			@include onboarding-break-mobile-landscape {
+				margin: 10px;
+			}
+		}
+
+		.step-container__content {
+			height: 100%;
+
+			@include break-small {
+				height: auto;
+			}
+
+			.pattern-picker {
+				height: 100%;
+
+				.pattern-picker__carousel {
+					width: 100%;
+					height: 100%;
+				}
 			}
 		}
 
