--- a/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
@@ -20,7 +20,7 @@
 			padding: 25px 0 0;
 		}
 
-		@media screen and ( max-height: 720px ) {
+		@media screen and (orientation: landscape) and ( max-height: 720px ) {
 			padding: 30px 0 0;
 		}
 
