--- a/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/patterns/styles.scss
@@ -21,7 +21,7 @@
 		}
 
 		@media screen and (orientation: landscape) and ( max-height: 720px ) {
-			padding: 30px 0 0;
+			padding: 5px;
 		}
 
 		.step-container__header {
