--- a/client/components/marketing-survey/cancel-purchase-form/precancellation-chat-button/style.scss
+++ b/client/components/marketing-survey/cancel-purchase-form/precancellation-chat-button/style.scss
@@ -1,14 +1,36 @@
-.precancellation-chat-button__main-button {
-	display: block;
+@import "@wordpress/base-styles/breakpoints";
+@import "@wordpress/base-styles/mixins";
 
-	@include breakpoint-deprecated( ">480px" ) {
-		float: left;
+.precancellation-chat-button__main-button {
+	display: none;
+	position: absolute;
+	right: 1rem;
+	font-size: inherit;
+
+	&.at-bottom {
+		display: inline-block;
+		font-size: 0;
+	}
+
+	@include break-small {
+		display: inline-block;
+		transform: translateY(-4px);
+
+		&.at-bottom {
+			display: none;
+		}
 	}
 
 	.material-icon {
-		width: 1rem;
-		height: 1rem;
+		fill: var(--studio-gray-50);
+		width: 1.5rem;
+		height: 1.5rem;
 		margin-right: 0.5rem;
 		vertical-align: middle;
+
+		@include break-small {
+			width: 1rem;
+			height: 1rem;
+		}
 	}
 }
