--- a/client/components/marketing-survey/cancel-purchase-form/style.scss
+++ b/client/components/marketing-survey/cancel-purchase-form/style.scss
@@ -16,16 +16,6 @@
 	vertical-align: middle;
 }
 
-.cancel-purchase-form__step {
-	position: absolute;
-	right: 1.5rem;
-	display: none;
-
-	@include break-small {
-		display: inline-block;
-	}
-}
-
 .cancel-purchase-form__feedback,
 .cancel-purchase-form__atomic-revert {
 	max-width: 730px;
@@ -149,39 +139,13 @@
 	}
 }
 
-.cancel-purchase-form__actions .precancellation-chat-button__main-button {
-	font-size: 0;
-	float: none;
-	right: 1rem;
-	color: var(--studio-gray-50);
-	display: inline-block;
-	position: absolute;
-
-	@include break-small {
-		margin: 1rem auto;
-		font-size: inherit;
-		position: relative;
-		display: block;
-	}
-
-	.material-icon {
-		fill: var(--studio-gray-50);
-		width: 1.5rem;
-		height: 1.5rem;
-
-		@include break-small {
-			width: 1rem;
-			height: 1rem;
-		}
-	}
-}
-
 .cancel-purchase-form__upsell {
 	padding: 1.5rem;
 	background-color: var(--studio-green-0);
 	border: 1px solid var(--studio-green-5);
 	border-radius: 5px; /* stylelint-disable-line scales/radii */
 	display: flex;
+	margin-bottom: 3rem;
 
 	.cancel-purchase-form__upsell-image {
 		display: none;
@@ -233,4 +197,8 @@
 		// Hide buttons rendered by old components, so we can still re-use them for rendering rest of content.
 		display: none;
 	}
+}
+
+.blank-canvas.cancel-purchase-form .blank-canvas__header-title {
+	z-index: 0;
 }
