Add missing style for domains

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domains/style.scss
@@ -1,7 +1,7 @@
 .step-container.domains {
 	padding: 0 20px;
-	margin-left: 20px;
 	max-width: 1280px;
+	margin: 0 auto;
 
 	.register-domain-step__search {
 		padding-top: 0;
