--- a/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/launchpad/style.scss
@@ -117,8 +117,30 @@
 	text-overflow: ellipsis;
 }
 
+.launchpad__url-box-domain-text {
+	flex-grow: 1;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .launchpad__url-box-top-level-domain {
 	font-weight: 500;
+}
+
+.launchpad__domain-upgrade-badge-button {
+	/* stylelint-disable-next-line scales/radii */
+	border-radius: 100px;
+	padding: 0;
+	border-style: none;
+}
+
+.launchpad__domain-upgrade-badge {
+
+	&:hover {
+		background: var(--studio-blue-10);
+	}
+
 }
 
 .launchpad__sidebar-admin-link {
@@ -201,7 +223,8 @@
 	border-bottom: 1px solid var(--studio-gray-5);
 }
 
-.launchpad__checklist-item .badge {
+.launchpad__checklist-item .badge,
+.launchpad__domain-upgrade-badge {
 	background-color: var(--studio-blue-5);
 	color: var(--studio-blue-80);
 }
