--- a/client/my-sites/sidebar/style.scss
+++ b/client/my-sites/sidebar/style.scss
@@ -755,6 +755,7 @@ $font-size: rem(14px);
 
 		// client/layout/sidebar/style.scss
 		.sidebar {
+			position: absolute;
 			padding-bottom: 120px;
 		}
 	}
