Fix Stylelint errors for rule: `color-named` (#68315)
* Fix stylelint errors for color-named

* Make color-named rule an error again

--- a/apps/editing-toolkit/editing-toolkit-plugin/event-countdown-block/blocks/src/style.scss
+++ b/apps/editing-toolkit/editing-toolkit-plugin/event-countdown-block/blocks/src/style.scss
@@ -181,10 +181,9 @@ $ecf_color6: #b82806;
 	}
 }
 
-
 @keyframes event_countdown_bang {
 	from {
-		box-shadow: 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white, 0 0 white;
+		box-shadow: 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white), 0 0 var(--studio-white);
 	}
 }
 
