--- a/client/blocks/reader-list-item/style.scss
+++ b/client/blocks/reader-list-item/style.scss
@@ -68,7 +68,7 @@
 	height: 32px;
 	min-height: 32px;
 	min-width: 32px;
-	background: gray;
+	background: var(--studio-gray-40);
 }
 
 .reader-list-item .site-icon {
