--- a/packages/social-previews/src/twitter-preview/style.scss
+++ b/packages/social-previews/src/twitter-preview/style.scss
@@ -172,7 +172,7 @@
 				text-decoration: none;
 				font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 				font-size: $font-body-small;
-				color: black;
+				color: var(--studio-black);
 				text-align: left;
 				/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 				line-height: 1.3em;
