--- a/apps/editing-toolkit/editing-toolkit-plugin/wpcom-block-editor-nux/src/welcome-modal/style.scss
+++ b/apps/editing-toolkit/editing-toolkit-plugin/wpcom-block-editor-nux/src/welcome-modal/style.scss
@@ -53,7 +53,7 @@ $wpcom-modal-footer-height: 30px + ( $wpcom-modal-footer-padding-v * 2 );
 		margin: 0;
 		display: flex;
 		justify-content: center;
-		background: white;
+		background: var(--studio-white);
 		border-top: 1px solid #dcdcde;
 
 		@media ( min-width: $wpcom-modal-breakpoint ) {
@@ -105,7 +105,7 @@ $wpcom-modal-footer-height: 30px + ( $wpcom-modal-footer-padding-v * 2 );
 	display: flex;
 	flex-direction: column-reverse;
 	justify-content: flex-end;
-	background: white;
+	background: var(--studio-white);
 	width: 100%;
 	height: 90%;
 	max-width: 90vw;
