--- a/apps/notifications/src/panel/boot/stylesheets/main.scss
+++ b/apps/notifications/src/panel/boot/stylesheets/main.scss
@@ -284,7 +284,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			color: white;
+			color: #fff;
 			height: 16px;
 			width: 16px;
 			border: {
