--- a/apps/o2-blocks/src/editor-notes/editor.scss
+++ b/apps/o2-blocks/src/editor-notes/editor.scss
@@ -1,5 +1,5 @@
 .wp-block-a8c-editor-notes {
-	border: 2px solid gray;
+	border: 2px solid var(--studio-gray-40);
 	position: relative;
 	padding: 32px 6px 6px;
 	background-color: #c0e7ff;
