--- a/client/components/foldable-faq/docs/style.scss
+++ b/client/components/foldable-faq/docs/style.scss
@@ -1,5 +1,5 @@
 .docs__foldable-faq {
-	background-color: white;
+	background-color: var(--studio-white);
 	padding: 5rem 1rem 2.5rem;
 	max-width: 960px;
 }
