--- a/client/devdocs/design/syntax.scss
+++ b/client/devdocs/design/syntax.scss
@@ -73,7 +73,7 @@ code[class*="lang-"] ::-moz-selection {
 	font-weight: 600;
 }
 .token.selector {
-	color: green;
+	color: var(--studio-green);
 }
 .language-autohotkey .token.keyword {
 	color: #c397d8;
