--- a/client/me/notification-settings/blogs-settings/style.scss
+++ b/client/me/notification-settings/blogs-settings/style.scss
@@ -68,7 +68,7 @@
 	background: var(--color-neutral-10);
 	background-color: var(--color-neutral-0);
 	position: relative;
-	border: 1px solid white;
+	border: 1px solid var(--studio-white);
 	height: 32px;
 	width: 32px;
 	overflow: hidden;
