--- a/client/my-sites/migrate/section-migrate.scss
+++ b/client/my-sites/migrate/section-migrate.scss
@@ -308,11 +308,11 @@
 }
 
 .migrate__token-label {
-	background-color: lightgrey;
+	background-color: var(--studio-gray-5);
 	border-radius: 10px; /* stylelint-disable-line scales/radii */
 	padding: 2px 5px;
 	font-size: $font-body-extra-small;
-	color: darkgray;
+	color: var(--studio-gray-20);
 	margin: 5px 3px 5px 0;
 }
 
