--- a/packages/plans-grid/src/plans-accordion-item/style.scss
+++ b/packages/plans-grid/src/plans-accordion-item/style.scss
@@ -131,8 +131,8 @@ ul.plans-accordion-item__feature-item-group {
 		height: 24px;
 		line-height: 24px;
 		padding: 0 14px;
-		background: black;
-		color: white;
+		background: var(--studio-black);
+		color: var(--color-text-inverted);
 		font-size: $font-body-extra-small;
 		font-weight: 600;
 		letter-spacing: 0.5px;
