--- a/packages/site-picker/src/style.scss
+++ b/packages/site-picker/src/style.scss
@@ -23,7 +23,7 @@
 	max-height: 300px;
 	overflow-y: auto;
 	position: absolute;
-	background: white;
+	background: var(--studio-white);
 	transform-origin: 0 0;
 	margin: 0;
 	border: 1px solid #c3c4c7;
