--- a/packages/wpcom.js/examples/media-editor/app.css
+++ b/packages/wpcom.js/examples/media-editor/app.css
@@ -22,7 +22,7 @@ h3 {
 	background: #aaa;
 	height: 24px;
 	line-height: 24px;
-	color: white;
+	color: var(--color-text-inverted);
 	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 10px;
 	text-transform: uppercase;
@@ -39,7 +39,7 @@ h3 {
 	padding: 10px;
 	/* stylelint-disable-next-line declaration-property-unit-allowed-list */
 	font-size: 12px;
-	background-color: white;
+	background-color: var(--studio-white);
 }
 
 .history-original img {
@@ -94,7 +94,7 @@ h3 {
 	position: absolute;
 	top: 1px;
 	left: 1px;
-	background-color: white;
+	background-color: var(--studio-white);
 	padding: 0 3px;
 	border: 1px solid #eee;
 	border-radius: 3px; /* stylelint-disable-line scales/radii */
@@ -110,5 +110,5 @@ h3 {
 	height: 300px;
 	background-size: contain;
 	background-repeat: no-repeat;
-	background-color: white;
+	background-color: var(--studio-white);
 }
