--- a/client/blocks/reader-related-card/style.scss
+++ b/client/blocks/reader-related-card/style.scss
@@ -104,6 +104,25 @@
 		}
 	}
 
+	.reader-featured-image {
+		position: relative;
+		&::after {
+			content: "";
+			position: absolute;
+			pointer-events: none;
+			top: 0;
+			left: 0;
+			bottom: 0;
+			right: 0;
+			box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+			border-radius: 6px; /* stylelint-disable-line scales/radii */
+		}
+
+		img {
+			height: 300px;
+		}
+	}
+
 	.reader-related-card__meta > a {
 		display: flex;
 		flex: 0 0 auto;
@@ -239,14 +258,6 @@
 .reader-related-card__featured-image {
 	border: 1px solid var(--color-neutral-0);
 	min-height: 78px;
-
-	&.reader-featured-image {
-		max-height: 150px;
-
-	}
-	@include breakpoint-deprecated( ">960px" ) {
-		min-height: 153px;
-	}
 }
 .reader-related-card {
 	.reader-related-card__link-block {
