--- a/client/jetpack-cloud/sections/partner-portal/license-product-card/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/license-product-card/style.scss
@@ -49,43 +49,47 @@
 	color: var(--studio-gray-80);
 }
 
-@mixin license-product-card-block__radio {
+@mixin license-product-card-block__select-button {
 	order: initial;
 	margin-right: 0;
 }
 
-@mixin license-product-card-line__radio {
+@mixin license-product-card-line__select-button {
 	order: -1;
 	margin-right: 1rem;
 }
 
-.license-product-card__radio {
+.license-product-card__select-button {
 	width: 20px;
 	height: 20px;
 	border: 2px solid var(--studio-black);
 	border-radius: 12px; /* stylelint-disable-line scales/radii */
 	text-align: center;
 
-	@include license-product-card-block__radio;
+	@include license-product-card-block__select-button;
 
 	@include break-mobile {
-		@include license-product-card-line__radio;
+		@include license-product-card-line__select-button;
 	}
 
 	@include breakpoint-deprecated( ">660px" ) {
-		@include license-product-card-block__radio;
+		@include license-product-card-block__select-button;
 	}
 
 	@include break-medium {
-		@include license-product-card-line__radio;
+		@include license-product-card-line__select-button;
 	}
 
 	@include break-xlarge {
-		@include license-product-card-block__radio;
+		@include license-product-card-block__select-button;
 	}
 }
 
-.license-product-card__radio .gridicon {
+.license-product-card_multi-select {
+	border-radius: 2px;
+}
+
+.license-product-card__select-button .gridicon {
 	color: #fff;
 	position: relative;
 	top: -2px;
@@ -93,7 +97,7 @@
 	width: 14px;
 }
 
-.license-product-card.selected .license-product-card__radio {
+.license-product-card.selected .license-product-card__select-button {
 	border: 2px solid var(--studio-jetpack-green-50);
 	background: var(--studio-jetpack-green-50);
 }
