--- a/client/blocks/reader-featured-image/style.scss
+++ b/client/blocks/reader-featured-image/style.scss
@@ -13,3 +13,19 @@
 		object-fit: cover;
 	}
 }
+
+.reader-full-post__content .reader-featured-image {
+	margin-bottom: 24px;
+	position: relative;
+	&::after {
+		content: "";
+		position: absolute;
+		pointer-events: none;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+		border-radius: 6px; /* stylelint-disable-line scales/radii */
+	}
+}
