Plugin Details: Update padding top of the layout section

--- a/client/my-sites/plugins/style.scss
+++ b/client/my-sites/plugins/style.scss
@@ -109,7 +109,7 @@ body.is-section-plugins.theme-default.color-scheme {
 			"actions actions actions"
 			"content content content";
 		grid-template-columns: repeat(3, minmax(0, 1fr));
-		padding-top: 0;
+		padding-top: 20px;
 	}
 
 	.plugin-details__header {
