Update Header Height for Logged Out Plugins Header

--- a/client/my-sites/plugins/plugin-navbar-header/style.scss
+++ b/client/my-sites/plugins/plugin-navbar-header/style.scss
@@ -38,8 +38,13 @@
 	width: 1px;
 }
 
-.masterbar {
-	height: 60px;
+.plugins-listing {
+	.masterbar {
+		height: 56px;
+	}
+	.fixed-navigation-header__header {
+		top: 56px;
+	}
 }
 
 %x-list {
