Fix the positioning of the WordPress Logo

--- a/client/my-sites/plugins/plugin-navbar-header/style.scss
+++ b/client/my-sites/plugins/plugin-navbar-header/style.scss
@@ -58,6 +58,22 @@
 	}
 }
 
+.x-icon--logo {
+	left: -1px;
+}
+
+.x-icon, .x-icon span {
+	color: inherit;
+	display: block;
+}
+.x-icon {
+	fill: currentcolor;
+	box-sizing: border-box;
+	height: 36px;
+	overflow: hidden;
+	position: relative;
+}
+
 /**
  * Content area
  */
